--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 }
 
 body {
+  background-image: url(./images/bg-header-desktop.png);
+  background-repeat: no-repeat;
+  background-position: right 0 top 0;
 }
 
 header {
@@ -78,7 +81,7 @@ h2 {
 .hero-section {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 650px;
+  grid-template-columns: 60% 1fr;
   justify-content: start;
   align-items: center;
 }
@@ -88,6 +91,7 @@ h2 {
   padding: 0;
   margin-top: 20px;
   line-height: 2;
+  color: hsl(201, 11%, 66%);
 }
 .hero-image {
   width: 100%;
@@ -161,7 +165,7 @@ footer {
   width: 100%;
   height: 150px;
   margin-bottom: 25px;
-  background-color: hsl(0, 0%, 91%);
+  background-color: hsl(0, 0%, 96%);
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -181,8 +185,12 @@ footer {
 .middle-side {
   flex: 1;
   display: flex;
+}
+.middle-side-item {
+  display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 20px;
+  margin-right: 100px;
 }
 
 .right-side {
@@ -190,4 +198,158 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: hsl(201, 11%, 66%);
+}
+
+ion-icon {
+  font-size: 30px;
+  color: hsl(210, 10%, 33%);
+  transition: transform 0.2s ease;
+}
+ion-icon:hover {
+  cursor: pointer;
+  transform: scale(1.3);
+}
+
+@media (max-width: 800px) {
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+    background-image: url(./images/bg-header-mobile.png);
+    background-repeat: no-repeat;
+  }
+  .hero-section {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: start;
+    align-items: center;
+  }
+  .hero-image {
+    margin: 0;
+  }
+  .tool-section {
+    grid-template-columns: 1fr;
+    margin-top: -80px;
+  }
+  .company-section {
+    flex-direction: column;
+  }
+  footer {
+    flex-direction: column;
+    height: 500px;
+    min-width: 400px;
+  }
+  .right-side {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 35px;
+  }
+  .left-side {
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+  .middle-side {
+    display: block;
+  }
+  .middle-side-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+    margin: 0;
+  }
+  a {
+    margin-bottom: 30px;
+    color: hsl(210, 10%, 33%);
+    font-weight: 600;
+  }
+  button {
+    padding: 15px 80px;
+  }
+  h2 {
+    font-size: 1.6em;
+    padding: 0 30px;
+  }
+  .snippet-paragraph {
+    font-size: 16px;
+    padding: 25px 40px;
+    line-height: 1.5;
+    margin-top: -20px;
+  }
+  .info-items {
+    text-align: center;
+  }
+  .hero-section-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+  }
+  .info-paragraph {
+    color: hsl(201, 11%, 66%);
+    font-size: 16px;
+    padding: 10px 47px;
+    line-height: 1.5;
+  }
+  .company-logo {
+    margin-bottom: 80px;
+  }
+  ion-icon {
+    margin: 0 15px;
+  }
+  .tool-paragraph {
+    font-size: 16px;
+    padding: 20px 25px;
+    margin-top: -5px;
+  }
+  .tool-paragraph.blacklist-paragraph {
+    padding: 20px 31px;
+  }
+  h1 {
+    font-size: 1.8em;
+  }
+  .logo-paragraph {
+    font-size: 16px;
+    padding: 20px 40px;
+    margin-top: 5px;
+  }
+  .hero-image-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .left {
+    margin-bottom: 25px;
+  }
+  .middle {
+    margin-bottom: 25px;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1200px) {
+  .hero-section {
+    grid-template-columns: 1fr;
+  }
+  .hero-image-container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .hero-image {
+    margin: 0;
+  }
+  .hero-section-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 100px;
+  }
 }
